<resources>
    <string name="app_name">Mantenimiento de Vehículos</string>
    <string name="textView_ActividadesGuardadas">ACTIVIDADES GUARDADAS</string>
    <string name="NombreDelMantenimiento">Nombre del mantenimiento</string>
    <string name="nombreIntervencionListView">Nombre de la intervención.</string>
    <string name="fechaIntervencionListView">00/00/00</string>
    <string name="descripcionListView">Descripción</string>
    <string name="TipoFormulario">Tipo</string>
    <string name="ImporteIntervencion">Importe</string>
    <string name="KilometrosIntervencion">Kilómetros</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Introduce_la_fecha">Introduce la fecha</string>
    <string name="Introduce_el_nombre">Introduce el nombre</string>
    <string name="Introduce_coste">Coste</string>
    <string name="Introduce_Klmtrs">Klmtrs</string>
    <string name="Introduce_Descripcion">Descripción</string>
    <string name="Introduce_Averia">Averia</string>
    <string name="Introduce_Mantenimiento">Mantenimiento</string>
    <string name="Registro_editado_con_exito">Registro editado con exito.</string>
    <string name="Debe_completar_todos_los_campos">Faltan campos por completar.\nEl unico campo que puedes dejar
        en blanco es la descripción.</string>
    <string name="selecciona_un_icono">Selecciona un icono para la intervención</string>
    <string name="Titulo_DialogIcon">Icono de la intervención</string>
    <string name="titulo_dialog_advertencia">Error en el Formulario</string>

</resources>
