<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc_jorge.app_mant.Formulario"
    android:clickable="true"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Introduce_la_fecha"
        android:id="@+id/textView_FechaFormulario"
        android:clickable="true"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_NombreFormulario"
        android:inputType="text"
        android:text="@string/Introduce_el_nombre"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_below="@+id/textView_FechaFormulario"
        android:layout_alignRight="@+id/textView_FechaFormulario"
        android:layout_alignEnd="@+id/textView_FechaFormulario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TipoFormulario"
        android:id="@+id/textView_Tipo_Formulario"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editText_NombreFormulario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText_Kilometros"
        android:text="@string/Introduce_Klmtrs"
        android:layout_alignTop="@+id/textView_Tipo_Formulario"
        android:layout_alignRight="@+id/editText_NombreFormulario"
        android:layout_alignEnd="@+id/editText_NombreFormulario"
        android:maxLength="6" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Tipo_Formulario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Introduce_Averia"
            android:id="@+id/radioButton_Averia"
            android:checked="false"
            android:layout_alignBottom="@+id/editText_Kilometros"
            android:layout_toRightOf="@+id/radioGroup"
            android:layout_toEndOf="@+id/radioGroup"
            android:layout_marginTop="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Introduce_Mantenimiento"
            android:id="@+id/radioButton_Mantenimiento"
            android:checked="true"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />
    </RadioGroup>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText_Importe"
        android:text="@string/Introduce_coste"
        android:layout_below="@+id/editText_Kilometros"
        android:layout_alignLeft="@+id/editText_Kilometros"
        android:layout_alignStart="@+id/editText_Kilometros"
        android:maxLength="5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/descripcionListView"
        android:id="@+id/textView_Descripcion_Formulario"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_below="@+id/editText_Importe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/editTextDescripcionFormulario"
        android:layout_weight="0.56"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button_AceptarFormulario"
        android:layout_below="@+id/textView_Descripcion_Formulario"
        android:gravity="start" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aceptar"
        android:id="@+id/button_AceptarFormulario"
        android:layout_row="15"
        android:layout_column="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar"
        android:id="@+id/button_Cancelar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>